[package]
name = "stargate"
description = "Stargate: UNIX userland + shell + language"
default-run = "stargate"
repository = "https://github.com/klimb/rust-stargate"
rust-version = "1.85.0"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["feat_common_core", "feat_os_unix", "feat_require_unix_core"]
## OS feature shortcodes
macos = ["feat_os_macos"]
unix = ["feat_os_unix"]
windows = ["feat_os_windows"]
## project-specific feature shortcodes
expensive_tests = []
# "test_risky_names" == enable tests that create problematic file names (would make a network share inaccessible to Windows, breaks SVN on Mac OS, etc.)
test_risky_names = []
## features
## Optional feature for stdbuf
# "feat_external_libstdbuf" == use an external libstdbuf.so for stdbuf instead of embedding it
feat_external_libstdbuf = ["stdbuf/feat_external_libstdbuf"]
# "feat_systemd_logind" == enable feat_systemd_logind support for utmpx replacement
feat_systemd_logind = [
  "uptime/feat_systemd_logind",
  "users/feat_systemd_logind",
  "sgcore/feat_systemd_logind",
  "who/feat_systemd_logind",
]
# "feat_transcription" == enable speech-to-text transcription in record-audio and record-video (requires Vosk)
feat_transcription = ["record-audio/transcription", "record-video/transcription"]

# "feat_common_core" == baseline core set of utilities which can be built/run on most targets
feat_common_core = [
  "base32",
  "base64",
  "basename",
  "basenc",
  "get_contents",
  "cksum",
  "comm",
  "cp",
  "csplit",
  "cut",
  "get_date",
  "dd",
  "df",
  "dircolors",
  "dirname",
  "du",
  "echo",
  "get_environment",
  "expand",
  "expr",
  "factor",
  "false",
  "find_text",
  "fmt",
  "fold",
  "hashsum",
  "head",
  "join",
  "link",
  "ln",
  "list_directory",
  "new_directory",
  "new_file",
  "append_file",
  "prepend_file",
  "mktemp",
  "more",
  "mv",
  "get_linenumber",
  "od",
  "paste",
  "pr",
  "printenv",
  "printf",
  "ptx",
  "pwd",
  "readlink",
  "realpath",
  "rm",
  "rmdir",
  "get_range",
  "shred",
  "shuf",
  "dice_object",
  "slice_object",
  "sleep",
  "sort",
  "split",
  "sum",
  "tac",
  "tail",
  "tee",
  "test",
  "touch",
  "tr",
  "true",
  "truncate",
  "tsort",
  "unexpand",
  "uniq",
  "unlink",
  "collect_count",
  "yes",
]
# "feat_Tier1" == expanded set of utilities which can be built/run on the usual rust "Tier 1" target platforms (ref: <https://forge.rust-lang.org/release/platform-support.html>)
feat_Tier1 = [
  "feat_common_core",
  #
  "get_architecture",
  "set-hostname",
  "get_hostname",
  "get_domainname",
  "get_fqdn",
  "nproc",
  "sync",
  "uname",
  "whoami",
]
## (primary platforms) feature sets
# "feat_os_macos" == set of utilities which can be built/run on the MacOS platform
feat_os_macos = [
  "feat_os_unix", ## == a modern/usual *nix platform
  #
  "scan-wifi",
  "monitor-traffic",
  "record-audio",
  "record-video",
  "scan-bt",
  "scan-arp",
  "scan-neighbors",
  "say-text",
]
# "feat_os_unix" == set of utilities which can be built/run on modern/usual *nix platforms.
feat_os_unix = [
  "feat_Tier1",
  #
  "feat_require_unix",
  "feat_require_unix_utmpx",
  "scan-neighbors",
]
# "feat_os_unix_musl" == set of utilities which can be built/run on targets binding to the "musl" library (ref: <https://musl.libc.org/about.html>)
# It excludes stdbuf due to cdylib limitations (https://github.com/rust-lang/rust/issues/82193)
feat_os_unix_musl = [
  "feat_Tier1",
  #
  "feat_require_unix_musl",
  "feat_require_unix_utmpx",
]
feat_os_windows = [
  "feat_Tier1", ## == "feat_os_windows_legacy" + "hostname"
]
## (secondary platforms) feature sets
# "feat_os_unix_gnueabihf" == set of utilities which can be built/run on the "arm-unknown-linux-gnueabihf" target (ARMv6 Linux [hardfloat])
feat_os_unix_gnueabihf = [
  "feat_Tier1",
  #
  "feat_require_unix",
  "feat_require_unix_utmpx",
]
feat_os_unix_android = [
  "feat_Tier1",
  #
  "feat_require_unix",
]
## feature sets with requirements (restricting cross-platform availability)
#
# ** NOTE: these `feat_require_...` sets should be minimized as much as possible to encourage cross-platform availability of utilities
#
# "feat_require_unix" == set of utilities requiring support which is only available on unix platforms
feat_require_unix = ["feat_require_unix_core", "stdbuf"]
# "feat_require_unix_musl" == set of utilities requiring unix support, excluding stdbuf (cdylib not supported on musl)
feat_require_unix_musl = ["feat_require_unix_core"]
# "feat_require_unix_core" == core unix utilities (shared between regular unix and musl)
feat_require_unix_core = [
  "change_group",
  "chmod",
  "change_owner",
  "chroot",
  "groups",
  "id",
  "install",
  "kill",
  "get_username",
  "last_touch",
  "mkfifo",
  "mknod",
  "nice",
  "nohup",
  "pathchk",
  "list-processes",
  "stat",
  "stty",
  "timeout",
  "tty",
]
# "feat_require_unix_utmpx" == set of utilities requiring unix utmp/utmpx support
# * ref: <https://wiki.musl-libc.org/faq.html#Q:-Why-is-the-utmp/wtmp-functionality-only-implemented-as-stubs?>
feat_require_unix_utmpx = ["uptime", "users", "who"]

# * bypass/override ~ translate 'test' feature name to avoid dependency collision with rust core 'test' crate (o/w surfaces as compiler errors during testing)
test = ["sg_test"]

[workspace]
resolver = "3"
members = [
  ".",
  "stargate-userland/commands/object-commands/*",
  "stargate-userland/commands/object-native/*",
  "stargate-userland/commands/text-commands/*",
  "stargate-userland/commands/text-commands/stdbuf/src/libstdbuf",
  "stargate-userland/sgcore",
  "stargate/sgcore_procs",
  "tests/sgtests",
  # "fuzz",  # TODO
]

[workspace.package]
authors = ["uutils developers"]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/uutils/coreutils"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
license = "MIT"
readme = "README.package.md"
version = "0.4.0"

[workspace.dependencies]
ansi-width = "0.1.0"
bigdecimal = "0.4"
binary-heap-plus = "0.5.0"
bstr = "1.9.1"
bytecount = "0.6.8"
byteorder = "1.5.0"
chrono = { version = "0.4.41", default-features = false, features = [
  "std",
  "alloc",
  "clock",
] }
clap = { version = "4.5", features = ["wrap_help", "cargo", "color"] }
clap_complete = "4.4"
clap_mangen = "0.2"
compare = "0.1.0"
crossterm = "0.29.0"
ctor = "0.6.0"
ctrlc = { version = "3.4.7", features = ["termination"] }
divan = { package = "codspeed-divan-compat", version = "4.0.5" }
dns-lookup = { version = "3.0.0" }
exacl = "0.12.0"
file_diff = "1.0.0"
filetime = "0.2.23"
fnv = "1.0.7"
fs_extra = "1.3.0"
fts-sys = "0.2.16"
gcd = "2.3"
glob = "0.3.1"
half = "2.4.1"
hostname = "0.4"
set-hostname = "0.4"
get_hostname = "0.4"
icu_collator = "2.0.0"
icu_decimal = "2.0.0"
icu_locale = "2.0.0"
icu_provider = "2.0.0"
indicatif = "0.18.0"
itertools = "0.14.0"
jiff = { version = "0.2.10", default-features = false, features = [
  "std",
  "alloc",
  "tz-system",
] }
lazy_static = "1.5"
libc = "0.2.172"
linux-raw-sys = "0.12"
lscolors = { version = "0.21.0", default-features = false, features = [
  "gnu_legacy",
] }
memchr = "2.7.2"
rustyline = "14.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9.4"
nix = { version = "0.30", default-features = false }
nom = "8.0.0"
notify = { version = "=8.2.0", features = ["macos_kqueue"] }
num-bigint = "0.4.4"
num-prime = "0.4.4"
num-traits = "0.2.19"
number_prefix = "0.4"
onig = { version = "~6.5.1", default-features = false }
parse_datetime = "0.13.0"
phf = "0.13.1"
phf_codegen = "0.13.1"
platform-info = "2.0.3"
procfs = "0.18"
rand = { version = "0.9.0", features = ["small_rng"] }
rand_core = "0.9.0"
rayon = "1.10"
regex = "1.10.4"
rstest = "0.26.0"
rust-ini = "0.21.0"
same-file = "1.0.6"
self_cell = "1.0.4"
sysinfo = "0.33"
# FIXME we use the exact version because the new 0.5.3 requires an MSRV of 1.88

signal-hook = "0.3.17"
tempfile = "3.15.0"
terminal_size = "0.4.0"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
thiserror = "2.0.3"
time = { version = "0.3.36" }
unicode-width = "0.2.0"
utmp-classic = "0.1.6"
uutils_term_grid = "0.7"
walkdir = "2.5"
winapi-util = "0.1.8"
windows-sys = { version = "0.61.0", default-features = false }
xattr = "1.3.1"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

hex = "0.4.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2b_simd = "1.0.2"
blake3 = "1.5.1"
sm3 = "0.4.2"
crc-fast = "1.5.0"
digest = "0.10.7"

# Fluent dependencies
fluent = "0.17.0"
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
fluent-syntax = "0.12.0"

sgcore = { version = "0.4.0", package = "sgcore", path = "stargate-userland/sgcore" }
sgcore_procs = { version = "0.4.0", package = "sgcore_procs", path = "stargate/sgcore_procs" }
sg_list_directory = { version = "0.4.0", path = "stargate-userland/commands/object-commands/list_directory" }
sg_base32 = { version = "0.4.0", path = "stargate-userland/commands/text-commands/base32" }
sgtests = { version = "0.4.0", package = "sgtests", path = "tests/sgtests" }

[dependencies]
clap.workspace = true
clap_complete = { workspace = true, optional = true }
clap_mangen = { workspace = true, optional = true }
fluent-syntax = { workspace = true, optional = true }
lazy_static.workspace = true
phf.workspace = true
rustyline.workspace = true
serde_json.workspace = true

textwrap.workspace = true
sgcore.workspace = true
zip = { workspace = true, optional = true }


# * uutils
sg_test = { optional = true, version = "0.4.0", package = "sg_test", path = "stargate-userland/commands/text-commands/test" }
#
get_architecture = { optional = true, version = "0.4.0", package = "sg_get_architecture", path = "stargate-userland/commands/object-commands/get_architecture" }
base32 = { optional = true, version = "0.4.0", package = "sg_base32", path = "stargate-userland/commands/text-commands/base32" }
base64 = { optional = true, version = "0.4.0", package = "sg_base64", path = "stargate-userland/commands/text-commands/base64" }
basename = { optional = true, version = "0.4.0", package = "sg_basename", path = "stargate-userland/commands/text-commands/basename" }
basenc = { optional = true, version = "0.4.0", package = "sg_basenc", path = "stargate-userland/commands/text-commands/basenc" }
get_contents = { optional = true, version = "0.4.0", package = "sg_get_contents", path = "stargate-userland/commands/text-commands/get_contents" }
change_group = { optional = true, version = "0.4.0", package = "sg_change_group", path = "stargate-userland/commands/text-commands/change_group" }
chmod = { optional = true, version = "0.4.0", package = "sg_chmod", path = "stargate-userland/commands/text-commands/chmod" }
change_owner = { optional = true, version = "0.4.0", package = "sg_change_owner", path = "stargate-userland/commands/text-commands/change_owner" }
chroot = { optional = true, version = "0.4.0", package = "sg_chroot", path = "stargate-userland/commands/text-commands/chroot" }
cksum = { optional = true, version = "0.4.0", package = "sg_cksum", path = "stargate-userland/commands/text-commands/cksum" }
comm = { optional = true, version = "0.4.0", package = "sg_comm", path = "stargate-userland/commands/text-commands/comm" }
cp = { optional = true, version = "0.4.0", package = "sg_cp", path = "stargate-userland/commands/text-commands/cp" }
csplit = { optional = true, version = "0.4.0", package = "sg_csplit", path = "stargate-userland/commands/text-commands/csplit" }
cut = { optional = true, version = "0.4.0", package = "sg_cut", path = "stargate-userland/commands/text-commands/cut" }
get_date = { optional = true, version = "0.4.0", package = "sg_get_date", path = "stargate-userland/commands/object-commands/get_date" }
dd = { optional = true, version = "0.4.0", package = "sg_dd", path = "stargate-userland/commands/text-commands/dd" }
df = { optional = true, version = "0.4.0", package = "sg_df", path = "stargate-userland/commands/text-commands/df" }
dircolors = { optional = true, version = "0.4.0", package = "sg_dircolors", path = "stargate-userland/commands/text-commands/dircolors" }
dirname = { optional = true, version = "0.4.0", package = "sg_dirname", path = "stargate-userland/commands/text-commands/dirname" }
du = { optional = true, version = "0.4.0", package = "sg_du", path = "stargate-userland/commands/text-commands/du" }
echo = { optional = true, version = "0.4.0", package = "sg_echo", path = "stargate-userland/commands/text-commands/echo" }
get_environment = { optional = true, version = "0.4.0", package = "sg_get_environment", path = "stargate-userland/commands/text-commands/get_environment" }
expand = { optional = true, version = "0.4.0", package = "sg_expand", path = "stargate-userland/commands/text-commands/expand" }
expr = { optional = true, version = "0.4.0", package = "sg_expr", path = "stargate-userland/commands/text-commands/expr" }
factor = { optional = true, version = "0.4.0", package = "sg_factor", path = "stargate-userland/commands/text-commands/factor" }
false = { optional = true, version = "0.4.0", package = "sg_false", path = "stargate-userland/commands/text-commands/false" }
find_text = { optional = true, version = "0.4.0", package = "sg_find_text", path = "stargate-userland/commands/text-commands/find-text" }
fmt = { optional = true, version = "0.4.0", package = "sg_fmt", path = "stargate-userland/commands/text-commands/fmt" }
fold = { optional = true, version = "0.4.0", package = "sg_fold", path = "stargate-userland/commands/text-commands/fold" }
groups = { optional = true, version = "0.4.0", package = "sg_groups", path = "stargate-userland/commands/text-commands/groups" }
hashsum = { optional = true, version = "0.4.0", package = "sg_hashsum", path = "stargate-userland/commands/text-commands/hashsum" }
head = { optional = true, version = "0.4.0", package = "sg_head", path = "stargate-userland/commands/text-commands/head" }
set-hostname = { optional = true, version = "0.4.0", package = "sg_set_hostname", path = "stargate-userland/commands/text-commands/set_hostname" }
get_hostname = { optional = true, version = "0.4.0", package = "sg_get_hostname", path = "stargate-userland/commands/object-commands/get_hostname" }
get_domainname = { optional = true, version = "0.4.0", package = "sg_get_domainname", path = "stargate-userland/commands/object-commands/get_domainname" }
record-audio = { optional = true, version = "0.4.0", package = "sg_record_audio", path = "stargate-userland/commands/object-commands/record_audio" }
record-video = { optional = true, version = "0.4.0", package = "sg_record_video", path = "stargate-userland/commands/object-commands/record_video" }
scan-bt = { optional = true, version = "0.4.0", package = "sg_scan_bt", path = "stargate-userland/commands/object-commands/scan_bt" }
scan-arp = { optional = true, version = "0.4.0", package = "sg_scan_arp", path = "stargate-userland/commands/object-commands/scan_arp" }
scan-neighbors = { optional = true, version = "0.4.0", package = "sg_scan_neighbors", path = "stargate-userland/commands/object-commands/scan_neighbors" }
say-text = { optional = true, version = "0.4.0", package = "sg_say_text", path = "stargate-userland/commands/object-commands/say_text" }
get_fqdn = { optional = true, version = "0.4.0", package = "sg_get_fqdn", path = "stargate-userland/commands/object-commands/get_fqdn" }
id = { optional = true, version = "0.4.0", package = "sg_id", path = "stargate-userland/commands/text-commands/id" }
install = { optional = true, version = "0.4.0", package = "sg_install", path = "stargate-userland/commands/text-commands/install" }
join = { optional = true, version = "0.4.0", package = "sg_join", path = "stargate-userland/commands/text-commands/join" }
kill = { optional = true, version = "0.4.0", package = "sg_kill", path = "stargate-userland/commands/text-commands/kill" }
link = { optional = true, version = "0.4.0", package = "sg_link", path = "stargate-userland/commands/text-commands/link" }
ln = { optional = true, version = "0.4.0", package = "sg_ln", path = "stargate-userland/commands/text-commands/ln" }
list_directory = { optional = true, version = "0.4.0", package = "sg_list_directory", path = "stargate-userland/commands/object-commands/list_directory" }
get_username = { optional = true, version = "0.4.0", package = "sg_get_username", path = "stargate-userland/commands/object-commands/get_username" }
last_touch = { optional = true, version = "0.4.0", package = "sg_last_touch", path = "stargate-userland/commands/object-commands/last_touch" }
new_directory = { optional = true, version = "0.4.0", package = "sg_new_directory", path = "stargate-userland/commands/text-commands/new_directory" }
new_file = { optional = true, version = "0.4.0", package = "sg_new_file", path = "stargate-userland/commands/text-commands/new_file" }
append_file = { optional = true, version = "0.4.0", package = "sg_append_file", path = "stargate-userland/commands/text-commands/append_file" }
prepend_file = { optional = true, version = "0.4.0", package = "sg_prepend_file", path = "stargate-userland/commands/text-commands/prepend_file" }
mkfifo = { optional = true, version = "0.4.0", package = "sg_mkfifo", path = "stargate-userland/commands/text-commands/mkfifo" }
mknod = { optional = true, version = "0.4.0", package = "sg_mknod", path = "stargate-userland/commands/text-commands/mknod" }
mktemp = { optional = true, version = "0.4.0", package = "sg_mktemp", path = "stargate-userland/commands/text-commands/mktemp" }
monitor-traffic = { optional = true, version = "0.4.0", package = "sg_monitor_traffic", path = "stargate-userland/commands/object-commands/monitor_traffic" }
more = { optional = true, version = "0.4.0", package = "sg_more", path = "stargate-userland/commands/text-commands/more" }
mv = { optional = true, version = "0.4.0", package = "sg_mv", path = "stargate-userland/commands/text-commands/mv" }
nice = { optional = true, version = "0.4.0", package = "sg_nice", path = "stargate-userland/commands/text-commands/nice" }
get_linenumber = { optional = true, version = "0.4.0", package = "sg_get_linenumber", path = "stargate-userland/commands/object-native/get_linenumber" }
nohup = { optional = true, version = "0.4.0", package = "sg_nohup", path = "stargate-userland/commands/text-commands/nohup" }
nproc = { optional = true, version = "0.4.0", package = "sg_nproc", path = "stargate-userland/commands/text-commands/nproc" }
od = { optional = true, version = "0.4.0", package = "sg_od", path = "stargate-userland/commands/text-commands/od" }
paste = { optional = true, version = "0.4.0", package = "sg_paste", path = "stargate-userland/commands/text-commands/paste" }
pathchk = { optional = true, version = "0.4.0", package = "sg_pathchk", path = "stargate-userland/commands/text-commands/pathchk" }
pr = { optional = true, version = "0.4.0", package = "sg_pr", path = "stargate-userland/commands/text-commands/pr" }
printenv = { optional = true, version = "0.4.0", package = "sg_printenv", path = "stargate-userland/commands/text-commands/printenv" }
list-processes = { optional = true, version = "0.4.0", package = "sg_list_processes", path = "stargate-userland/commands/object-commands/list_processes" }
scan-wifi = { optional = true, version = "0.4.0", package = "sg_scan_wifi", path = "stargate-userland/commands/object-commands/scan_wifi" }
printf = { optional = true, version = "0.4.0", package = "sg_printf", path = "stargate-userland/commands/text-commands/printf" }
ptx = { optional = true, version = "0.4.0", package = "sg_ptx", path = "stargate-userland/commands/text-commands/ptx" }
pwd = { optional = true, version = "0.4.0", package = "sg_pwd", path = "stargate-userland/commands/text-commands/pwd" }
readlink = { optional = true, version = "0.4.0", package = "sg_readlink", path = "stargate-userland/commands/text-commands/readlink" }
realpath = { optional = true, version = "0.4.0", package = "sg_realpath", path = "stargate-userland/commands/text-commands/realpath" }
rm = { optional = true, version = "0.4.0", package = "sg_rm", path = "stargate-userland/commands/text-commands/rm" }
rmdir = { optional = true, version = "0.4.0", package = "sg_rmdir", path = "stargate-userland/commands/text-commands/rmdir" }

get_range = { optional = true, version = "0.4.0", package = "sg_get_range", path = "stargate-userland/commands/object-native/get_range" }
shred = { optional = true, version = "0.4.0", package = "sg_shred", path = "stargate-userland/commands/text-commands/shred" }
shuf = { optional = true, version = "0.4.0", package = "sg_shuf", path = "stargate-userland/commands/text-commands/shuf" }
dice_object = { optional = true, version = "0.4.0", package = "sg_dice_object", path = "stargate-userland/commands/object-native/dice_object" }
slice_object = { optional = true, version = "0.4.0", package = "sg_slice_object", path = "stargate-userland/commands/object-native/slice_object" }
sleep = { optional = true, version = "0.4.0", package = "sg_sleep", path = "stargate-userland/commands/text-commands/sleep" }
sort = { optional = true, version = "0.4.0", package = "sg_sort", path = "stargate-userland/commands/text-commands/sort" }
split = { optional = true, version = "0.4.0", package = "sg_split", path = "stargate-userland/commands/text-commands/split" }
stat = { optional = true, version = "0.4.0", package = "sg_stat", path = "stargate-userland/commands/object-commands/stat" }
stdbuf = { optional = true, version = "0.4.0", package = "sg_stdbuf", path = "stargate-userland/commands/text-commands/stdbuf" }
stty = { optional = true, version = "0.4.0", package = "sg_stty", path = "stargate-userland/commands/text-commands/stty" }
sum = { optional = true, version = "0.4.0", package = "sg_sum", path = "stargate-userland/commands/text-commands/sum" }
sync = { optional = true, version = "0.4.0", package = "sg_sync", path = "stargate-userland/commands/text-commands/sync" }
tac = { optional = true, version = "0.4.0", package = "sg_tac", path = "stargate-userland/commands/text-commands/tac" }
tail = { optional = true, version = "0.4.0", package = "sg_tail", path = "stargate-userland/commands/text-commands/tail" }
tee = { optional = true, version = "0.4.0", package = "sg_tee", path = "stargate-userland/commands/text-commands/tee" }
timeout = { optional = true, version = "0.4.0", package = "sg_timeout", path = "stargate-userland/commands/text-commands/timeout" }
touch = { optional = true, version = "0.4.0", package = "sg_touch", path = "stargate-userland/commands/text-commands/touch" }
tr = { optional = true, version = "0.4.0", package = "sg_tr", path = "stargate-userland/commands/text-commands/tr" }
true = { optional = true, version = "0.4.0", package = "sg_true", path = "stargate-userland/commands/text-commands/true" }
truncate = { optional = true, version = "0.4.0", package = "sg_truncate", path = "stargate-userland/commands/text-commands/truncate" }
tsort = { optional = true, version = "0.4.0", package = "sg_tsort", path = "stargate-userland/commands/text-commands/tsort" }
tty = { optional = true, version = "0.4.0", package = "sg_tty", path = "stargate-userland/commands/text-commands/tty" }
uname = { optional = true, version = "0.4.0", package = "sg_uname", path = "stargate-userland/commands/text-commands/uname" }
unexpand = { optional = true, version = "0.4.0", package = "sg_unexpand", path = "stargate-userland/commands/text-commands/unexpand" }
uniq = { optional = true, version = "0.4.0", package = "sg_uniq", path = "stargate-userland/commands/text-commands/uniq" }
unlink = { optional = true, version = "0.4.0", package = "sg_unlink", path = "stargate-userland/commands/text-commands/unlink" }
uptime = { optional = true, version = "0.4.0", package = "sg_uptime", path = "stargate-userland/commands/object-commands/uptime" }
users = { optional = true, version = "0.4.0", package = "sg_users", path = "stargate-userland/commands/object-commands/users" }
collect_count = { optional = true, version = "0.4.0", package = "sg_collect_count", path = "stargate-userland/commands/object-native/collect-count" }
who = { optional = true, version = "0.4.0", package = "sg_who", path = "stargate-userland/commands/text-commands/who" }
whoami = { optional = true, version = "0.4.0", package = "sg_whoami", path = "stargate-userland/commands/text-commands/whoami" }
yes = { optional = true, version = "0.4.0", package = "sg_yes", path = "stargate-userland/commands/text-commands/yes" }

# this breaks clippy linting with: "tests/by-util/test_factor_benches.rs: No such file or directory (os error 2)"
# factor_benches = { optional = true, version = "0.0.0", package = "sg_factor_benches", path = "tests/benches/factor" }

#
# * pinned transitive dependencies
# Not needed for now. Keep as examples:
#pin_cc = { version="1.0.61, < 1.0.62", package="cc" } ## cc v1.0.62 has compiler errors for MinRustV v1.32.0, requires 1.34 (for `std::str::split_ascii_whitespace()`)

[dev-dependencies]
chrono.workspace = true
ctor.workspace = true
filetime.workspace = true
glob.workspace = true
libc.workspace = true
num-prime.workspace = true
pretty_assertions = "1.4.0"
rand.workspace = true
regex.workspace = true
sha1 = { workspace = true, features = ["std"] }
tempfile.workspace = true
time = { workspace = true, features = ["local-offset"] }
unindent = "0.2.3"
sgtests.workspace = true
sgcore = { workspace = true, features = [
  "mode",
  "entries",
  "process",
  "signals",
  "utmpx",
] }
walkdir.workspace = true
hex-literal = "1.0.0"
rstest.workspace = true

[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true, features = [
  "process",
  "signal",
  "socket",
  "user",
  "term",
] }
rlimit = "0.10.1"
xattr.workspace = true

# Used in test_uptime::test_uptime_with_file_containing_valid_boot_time_utmpx_record
# to deserialize an utmpx struct into a binary file
[target.'cfg(all(target_family= "unix",not(target_os = "macos")))'.dev-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde-big-array = "0.5.1"


[build-dependencies]
phf_codegen.workspace = true

[lib]
name = "stargate"
path = "stargate-userland/lib.rs"

[[bin]]
name = "stargate"
path = "stargate/main.rs"

[[bin]]
name = "stargate-shell"
path = "stargate-shell/stargate_shell_main.rs"

# The default release profile with some optimizations.
[profile.release]
lto = true
panic = "abort"

[profile.release-fast]
inherits = "release"
codegen-units = 1

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release-fast"
opt-level = "z"
strip = true

# A release-like profile with debug info for profiling.
# See https://github.com/mstange/samply .
[profile.profiling]
inherits = "release"
panic = "unwind"
debug = true

[lints]
workspace = true

# This is the linting configuration for all crates.
# In order to use these, all crates have `[lints] workspace = true` section.
[workspace.lints.rust]
# Allow "fuzzing" as a "cfg" condition name
# https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
#unused_qualifications = "warn" // TODO: fix warnings in sgcore, then re-enable this lint

[workspace.lints.clippy]
# The counts were generated with this command:
#   cargo clippy --all-targets --workspace --message-format=json --quiet \
#     | jq -r '.message.code.code | select(. != null and startswith("clippy::"))' \
#     | sort | uniq -c | sort -h -r
#
# TODO:
#  remove large_stack_arrays when https://github.com/rust-lang/rust-clippy/issues/13774 is fixed
#
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
use_self = "warn"                            # nursery lint
cargo_common_metadata = "allow"              # 3240
multiple_crate_versions = "allow"            # 2882
missing_errors_doc = "allow"                 # 1572
missing_panics_doc = "allow"                 # 946
must_use_candidate = "allow"                 # 322
match_same_arms = "allow"                    # 204
redundant_closure_for_method_calls = "allow" # 125
cast_possible_truncation = "allow"           # 122
too_many_lines = "allow"                     # 101
trivially_copy_pass_by_ref = "allow"         # 84
single_match_else = "allow"                  # 82
cast_possible_wrap = "allow"                 # 78
cast_sign_loss = "allow"                     # 70
struct_excessive_bools = "allow"             # 68
cast_precision_loss = "allow"                # 52
cast_lossless = "allow"                      # 35
unnecessary_wraps = "allow"                  # 33
ignored_unit_patterns = "allow"              # 21
similar_names = "allow"                      # 20
large_stack_arrays = "allow"                 # 20
wildcard_imports = "allow"                   # 18
used_underscore_binding = "allow"            # 18
needless_pass_by_value = "allow"             # 16
float_cmp = "allow"                          # 12
items_after_statements = "allow"             # 11
return_self_not_must_use = "allow"           # 8
needless_continue = "allow"                  # 6
inline_always = "allow"                      # 6
fn_params_excessive_bools = "allow"          # 6
used_underscore_items = "allow"              # 2
should_panic_without_expect = "allow"        # 2

doc_markdown = "allow"
unused_self = "allow"
map_unwrap_or = "allow"
enum_glob_use = "allow"
ptr_cast_constness = "allow"
borrow_as_ptr = "allow"
ptr_as_ptr = "allow"
needless_raw_string_hashes = "allow"
unreadable_literal = "allow"
unnested_or_patterns = "allow"
implicit_hasher = "allow"
struct_field_names = "allow"
doc_link_with_quotes = "allow"
format_push_string = "allow"
flat_map_option = "allow"
from_iter_instead_of_collect = "allow"
large_types_passed_by_value = "allow"
