[package]
name = "uufuzz"
authors = ["uutils developers"]
description = "Stargate: core fuzzing library"
repository = "https://github.com/klimb/rust-stargate"
version = "0.4.0"
edition.workspace = true
license.workspace = true

[dependencies]
console = "0.16.0"
libc = "0.2.153"
rand = { version = "0.9.0", features = ["small_rng"] }
similar = "2.5.0"
sgcore = { version = "0.4.0", path = "../../stargate-stardust/sgcore", features = ["parser"] }
tempfile = "3.15.0"
