[package]
name = "sgcore_procs"
description = "stargate ~ 'sgcore' proc-macros"
repository = "https://github.com/uutils/coreutils/tree/main/src/sgcore_procs"
keywords = ["cross-platform", "proc-macros", "sgcore", "stargate"]
# categories = ["os"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
