# spell-checker:ignore (features) zerocopy serde

[package]
name = "sgtests"
description = "Stargate: core test library (cross-platform)"
repository = "https://github.com/klimb/rust-stargate"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib/lib.rs"

[dependencies]
ctor = { workspace = true }
libc = { workspace = true }
pretty_assertions = "1.4.0"
rand = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
sgcore = { workspace = true, features = [
  "mode",
  "entries",
  "process",
  "signals",
  "utmpx",
] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["process", "signal", "user", "term"] }
rlimit = "0.10.1"
xattr = { workspace = true }
