[package]
name = "sg_append_file"
description = "append-file ~ append text to a file from stdin"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/append_file.rs"

[dependencies]
clap = { workspace = true }
sgcore = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "append-file"
path = "src/main.rs"
