[package]
name = "sg_change_group"
description = "change-group ~ (uutils) change the group ownership of FILE"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/change_group"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/change_group.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true, features = ["entries", "fs", "perms"] }
fluent = { workspace = true }

[[bin]]
name = "change-group"
path = "src/main.rs"
