[package]
name = "sg_change_owner"
description = "change owner"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/chown"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/change_owner.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true, features = [
  "entries",
  "fs",
  "perms",
  "safe-traversal",
] }
fluent = { workspace = true }

[[bin]]
name = "change-owner"
path = "src/main.rs"
