[package]
name = "sg_collect_count"
description = "collect-count ~ collect and count file statistics from JSON pipelines"
repository = "https://github.com/klimb/rust-stargate"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/collect_count.rs"

[dependencies]
clap = { workspace = true }
sgcore = { workspace = true, features = ["parser", "pipes", "quoting-style"] }
bytecount = { workspace = true, features = ["runtime-dispatch-simd"] }
thiserror = { workspace = true }
unicode-width = { workspace = true }
fluent = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
tempfile = { workspace = true }
sgcore = { workspace = true, features = ["benchmark"] }

[[bin]]
name = "collect-count"
path = "src/main.rs"

[[bench]]
name = "collect_count_bench"
harness = false
