# spell-checker:ignore datetime tzdb zoneinfo
[package]
name = "sg_date"
description = "date ~ (uutils) display or set the current time"
repository = "https://github.com/uutils/coreutils/tree/main/src/date"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/date.rs"

[dependencies]
clap = { workspace = true }
fluent = { workspace = true }
jiff = { workspace = true, features = [
  "tzdb-bundle-platform",
  "tzdb-zoneinfo",
  "tzdb-concatenated",
] }
parse_datetime = { workspace = true }
sgcore = { workspace = true, features = ["parser"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[[bin]]
name = "date"
path = "src/main.rs"
