[package]
name = "sg_df"
description = "df ~ (uutils) display file system information"
repository = "https://github.com/klimb/rust-stargate"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/df.rs"

[dependencies]
clap = { workspace = true }
sgcore = { workspace = true, features = ["libc", "fsext", "parser", "fs"] }
unicode-width = { workspace = true }
thiserror = { workspace = true }
fluent = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "df"
path = "src/main.rs"
