[package]
name = "sg_dice_object"
description = "dice-object ~ filter JSON object columns/fields"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/dice_object"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/dice_object.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true }
fluent = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "dice-object"
path = "src/main.rs"
