[package]
name = "sg_du"
description = "du ~ (uutils) display disk usage"
repository = "https://github.com/klimb/rust-stargate"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/du.rs"

[dependencies]
# For the --exclude & --exclude-from options
glob = { workspace = true }
clap = { workspace = true }
sgcore = { workspace = true, features = [
  "format",
  "fsext",
  "parser",
  "time",
  "safe-traversal",
] }
thiserror = { workspace = true }
fluent = { workspace = true }

[[bin]]
name = "du"
path = "src/main.rs"

[dev-dependencies]
divan = { workspace = true }
tempfile = { workspace = true }
sgcore = { workspace = true, features = ["benchmark"] }

[[bench]]
name = "du_bench"
harness = false
