[package]
name = "sg_get_environment"
description = "get-environment ~ Display environment variables as structured data"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/env"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/env.rs"

[dependencies]
clap = { workspace = true }
rust-ini = { workspace = true }
thiserror = { workspace = true }
sgcore = { workspace = true, features = ["signals"] }
fluent = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal"] }


[[bin]]
name = "get-environment"
path = "src/main.rs"
