[package]
name = "sg_expand"
description = "expand ~ (uutils) convert input tabs to spaces"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/expand"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/expand.rs"

[dependencies]
clap = { workspace = true }
unicode-width = { workspace = true }
sgcore = { workspace = true }
thiserror = { workspace = true }
fluent = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
tempfile = { workspace = true }
sgcore = { workspace = true, features = ["benchmark"] }

[[bin]]
name = "expand"
path = "src/main.rs"

[[bench]]
name = "expand_bench"
harness = false
