[package]
name = "sg_find_text"
description = "find-text ~ search for text patterns in files"
repository = "https://github.com/klimb/rust-stargate"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/find_text.rs"

[dependencies]
clap = { workspace = true }
sgcore = { workspace = true }
fluent = { workspace = true }
serde_json = { workspace = true }
atty = "0.2"

[[bin]]
name = "find-text"
path = "src/main.rs"
