[package]
name = "sg_get_contents"
description = "get-contents ~ concatenate and display input"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/cat"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/get_contents.rs"

[dependencies]
clap = { workspace = true }
memchr = { workspace = true }
thiserror = { workspace = true }
sgcore = { workspace = true, features = ["fast-inc", "fs", "pipes"] }
fluent = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "get-contents"
path = "src/main.rs"
