[package]
name = "sg_get_domainname"
description = "domainname - display system domainname"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/hostname"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/get_domainname.rs"

[dependencies]
clap = { workspace = true }
hostname = { workspace = true, features = ["set"] }
uucore = { workspace = true, features = ["wide"] }
fluent = { workspace = true }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
dns-lookup = { workspace = true }

[[bin]]
name = "get-domainname"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["uucore_procs"]
