[package]
name = "sg_get_hostname"
description = "get-hostname"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/hostname"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/get_hostname.rs"

[dependencies]
clap = { workspace = true }
hostname = { workspace = true, features = ["set"] }
uucore = { workspace = true, features = ["wide"] }
fluent = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
dns-lookup = { workspace = true }

[[bin]]
name = "get-hostname"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["uucore_procs"]
