[package]
name = "sg_groups"
description = "groups ~ (uutils) display group memberships for USERNAME"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/groups"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/groups.rs"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
sgcore = { workspace = true, features = ["entries", "process"] }
fluent = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "groups"
path = "src/main.rs"
