[package]
name = "sg_head"
description = "head ~ (uutils) display the first lines of input"
repository = "https://github.com/klimb/rust-stargate"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/head.rs"

[dependencies]
clap = { workspace = true }
memchr = { workspace = true }
thiserror = { workspace = true }
sgcore = { workspace = true, features = [
  "parser",
  "ringbuffer",
  "lines",
  "fs",
] }
fluent = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "head"
path = "src/main.rs"
